# yess-cpp

./: CMakeLists.txt  build.sh
yess/: pi.h  random.h  yess.h
